# two_scara_collaboration

./: CMakeLists.txt  README.md  package.xml
launch/: initialize.launch  initialize.world
src/: scara_joint_controller.cpp
urdf/: red_cylinder.urdf
